[gd_scene load_steps=3 format=3 uid="uid://spgentqvpdn7"]

[ext_resource type="Script" path="res://addons/uml/ui/node/class/class_node_title_editor.gd" id="1_fjrcs"]
[ext_resource type="Theme" uid="uid://56an2mymekb2" path="res://addons/uml/ui/node/uml_node_theme.tres" id="2_p075j"]

[node name="TitleEditor" type="Node" node_paths=PackedStringArray("_editing_popup", "_edits_container", "_class_name_edit", "_parent_class_name_edit")]
script = ExtResource("1_fjrcs")
_editing_popup = NodePath("EditClassNamePopup")
_edits_container = NodePath("EditClassNamePopup/VBoxContainer")
_class_name_edit = NodePath("EditClassNamePopup/VBoxContainer/ClassNameEdit")
_parent_class_name_edit = NodePath("EditClassNamePopup/VBoxContainer/ParentClassNameEdit")

[node name="EditClassNamePopup" type="Popup" parent="."]
transparent_bg = true
gui_embed_subwindows = true
size = Vector2i(100, 50)
transparent = true

[node name="VBoxContainer" type="VBoxContainer" parent="EditClassNamePopup"]
offset_right = 18.0
offset_bottom = 50.0
theme = ExtResource("2_p075j")

[node name="ClassNameEdit" type="LineEdit" parent="EditClassNamePopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_p075j")
theme_type_variation = &"UmlNodeTitleEdit"
text = "Class"
context_menu_enabled = false
select_all_on_focus = true

[node name="ParentClassNameEdit" type="LineEdit" parent="EditClassNamePopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_p075j")
theme_type_variation = &"UmlNodeTitleEdit"
text = "Class"
context_menu_enabled = false
select_all_on_focus = true

[connection signal="focus_entered" from="EditClassNamePopup" to="EditClassNamePopup/VBoxContainer/ClassNameEdit" method="grab_focus"]
[connection signal="popup_hide" from="EditClassNamePopup" to="." method="_on_editing_popup_hide"]
[connection signal="text_changed" from="EditClassNamePopup/VBoxContainer/ClassNameEdit" to="." method="_on_class_name_edit_text_changed"]
[connection signal="text_changed" from="EditClassNamePopup/VBoxContainer/ParentClassNameEdit" to="." method="_on_parent_class_name_edit_text_changed"]
